@@ -1,3 +1,12 @@
+2011-01-23  Andreas Kling  <kling@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Don't scale absolute geometry specified by viewport meta tag.
+
+        * dom/ViewportArguments.cpp:
+        (WebCore::computeViewportAttributes):
+
 2011-01-23  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Unreviewed build fix.
